// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useMotiWithStyleProps transforms Moti 'animate' props correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "backgroundColor": "#ffc0cb",
        "padding": "s",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#ffc0cb",
          "padding": "s",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffc0cb",
        "padding": "s",
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'exit' props correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    exit={
      {
        "backgroundColor": "#ffc0cb",
        "padding": "s",
      }
    }
    style={{}}
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'exitTransition' props correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    exitTransition={
      {
        "type": "timing",
      }
    }
    style={{}}
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'from' props correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#ffc0cb",
          "padding": "s",
        },
      }
    }
    collapsable={false}
    from={
      {
        "backgroundColor": "#ffc0cb",
        "padding": "s",
      }
    }
    style={
      {
        "backgroundColor": "#ffc0cb",
        "padding": "s",
      }
    }
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'state' props correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    state={
      {
        "from": {
          "backgroundColor": "pink",
          "p": "s",
        },
        "to": {
          "backgroundColor": "silver",
          "p": "xs",
        },
      }
    }
    style={{}}
  />
</View>
`;

exports[`useMotiWithStyleProps transforms Moti 'transition' props correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={{}}
    transition={
      {
        "type": "timing",
      }
    }
  />
</View>
`;
